--- a/src/css/pages/scss/graphic.scss
+++ b/src/css/pages/scss/graphic.scss
@@ -11,9 +11,8 @@
   .graphic__wrap {
     display: flex;
     align-items: center;
-    width: 300%;
     gap: 100px;
-    margin-top: 180px;
+    margin-top: 230px;
     padding-left: 120px;
   }
 
@@ -154,36 +153,62 @@
   /* Animation */
   .parallax>use {
     animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite;
-  }
 
-  .parallax>use:nth-child(1) {
-    animation-delay: -2s;
-    animation-duration: 7s;
-  }
-
-  .parallax>use:nth-child(2) {
-    animation-delay: -3s;
-    animation-duration: 10s;
-  }
-
-  .parallax>use:nth-child(3) {
-    animation-delay: -4s;
-    animation-duration: 13s;
-  }
-
-  .parallax>use:nth-child(4) {
-    animation-delay: -5s;
-    animation-duration: 20s;
-  }
-
-  @keyframes move-forever {
-    0% {
-      transform: translate3d(-90px, 0, 0);
+    &:nth-child(1) {
+      animation-delay: -2s;
+      animation-duration: 7s;
     }
 
-    100% {
-      transform: translate3d(85px, 0, 0);
+    &:nth-child(2) {
+      animation-delay: -3s;
+      animation-duration: 10s;
+    }
+
+    &:nth-child(3) {
+      animation-delay: -4s;
+      animation-duration: 13s;
+    }
+
+    &:nth-child(4) {
+      animation-delay: -5s;
+      animation-duration: 20s;
+    }
+
+    @keyframes move-forever {
+      0% {
+        transform: translate3d(-90px, 0, 0);
+      }
+
+      100% {
+        transform: translate3d(85px, 0, 0);
+      }
     }
   }
 
+
+
+}
+
+@media (max-width:767px) {
+  #graphic {
+    .graphic__wrap {
+      width: 270%;
+    }
+  }
+}
+
+@media (min-width:768px) {
+  #graphic {
+    .graphic__wrap {
+      width: 250%;
+    }
+  }
+}
+
+@media (min-width:1024px) {
+  #graphic {
+    .graphic__wrap {
+      width: 200%;
+    }
+  }
 }
