--- a/src/css/pages/title.css
+++ b/src/css/pages/title.css
@@ -1,5 +1,5 @@
 .title {
-  z-index: 99;
+  z-index: 50;
 }
 .title span {
   display: inline-block;
@@ -28,18 +28,6 @@
   line-height: 1.5;
 }
 
-.project_title {
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-}
-
-.footer_title {
-  position: absolute;
-}
-
 @media (max-width: 767px) {
   .title span {
     font-size: 2.5rem;
@@ -53,6 +41,7 @@
 @media (min-width: 768px) {
   .title span {
     font-size: 4rem;
+    white-space: nowrap;
   }
   .title em {
     font-size: 1.1rem;
