--- a/src/css/pages/project.css
+++ b/src/css/pages/project.css
@@ -91,12 +91,9 @@
   width: 100%;
   object-fit: cover;
 }
-#project #vslide {
-  align-items: center;
-  justify-content: center;
-}
 #project #vslide .vSwiper {
   height: 100%;
+  margin: 0;
 }
 #project #vslide .vSwiper .swiper-slide {
   display: flex;
@@ -211,7 +208,7 @@
 @media (min-width: 1024px) {
   .project-box {
     top: 300px;
-    height: 60vh;
+    height: 55vh;
   }
   .project-box .tabs {
     position: relative;
