--- a/src/css/pages/scss/footer.scss
+++ b/src/css/pages/scss/footer.scss
@@ -56,7 +56,7 @@
             /* 원형 이미지 */
             background-repeat: repeat;
             background-size: 60px 50px;
-            animation: moveBackground 10s linear infinite;
+            animation: moveBackground 25s linear infinite;
             filter: invert(1);
         }
 
@@ -147,8 +147,25 @@
 @media (min-width:768px) {
     #footer {
         .wsplide {
-            padding: 20px 0;
+            padding: 15px 0;
 
+            #splide1 {
+                .splide__slide {
+                    font-size: 1.3rem;
+                }
+            }
+        }
+
+        .contact {
+            width: 80%;
+        }
+    }
+}
+
+@media (min-width:1024px) {
+    #footer {
+        .wsplide {
+            padding: 20px 0;
             #splide1 {
                 .splide__slide {
                     font-size: 1.5rem;
@@ -161,5 +178,3 @@
         }
     }
 }
-
-@media (min-width:1024px) {}
