--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -119,11 +119,10 @@
     }
 
     #vslide {
-        align-items: center;
-        justify-content: center;
 
         .vSwiper {
             height: 100%;
+            margin: 0;
 
             .swiper-slide {
                 display: flex;
@@ -292,7 +291,7 @@
 @media (min-width:1024px) {
     .project-box {
         top: 300px;
-        height: 60vh;
+        height: 55vh;
 
         .tabs {
             position: relative;
