--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -5,6 +5,31 @@
         position: relative;
         width: 100%;
         height: 100vh;
+
+
+        .togglebtnO {
+            cursor: pointer;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 30%;
+            width: 100px;
+            height: 30px;
+            border: 2px solid rgba(255, 255, 255, .5);
+            border-radius: 50px;
+            padding: 5px;
+
+            .togglebtnI {
+                cursor: pointer;
+                background: rgba(255, 255, 255, .5);
+                width: 30px;
+                height: 30px;
+                border: none;
+                border-radius: 15px;
+                position: relative;
+                left: 0px;
+            }
+        }
     }
 
     .container {
@@ -167,7 +192,7 @@
     #work {
 
         .work_left {
-            width: 45%;
+            width: 50%;
 
             .work_title {
                 position: absolute;
@@ -180,12 +205,12 @@
 
         .container {
             right: 3%;
-            width: 50%;
+            width: 45%;
             height: 100vh;
             flex-direction: row;
 
             .splide-wrapper {
-                width: 40%;
+                width: 44%;
                 height: 100%;
 
                 .splide {
