--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -6,6 +6,28 @@
   width: 100%;
   height: 100vh;
 }
+#work .work_left .togglebtnO {
+  cursor: pointer;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 30%;
+  width: 100px;
+  height: 30px;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 50px;
+  padding: 5px;
+}
+#work .work_left .togglebtnO .togglebtnI {
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.5);
+  width: 30px;
+  height: 30px;
+  border: none;
+  border-radius: 15px;
+  position: relative;
+  left: 0px;
+}
 #work .container {
   position: absolute;
 }
@@ -114,7 +136,7 @@
 }
 @media (min-width: 1300px) {
   #work .work_left {
-    width: 45%;
+    width: 50%;
   }
   #work .work_left .work_title {
     position: absolute;
@@ -125,12 +147,12 @@
   }
   #work .container {
     right: 3%;
-    width: 50%;
+    width: 45%;
     height: 100vh;
     flex-direction: row;
   }
   #work .container .splide-wrapper {
-    width: 40%;
+    width: 44%;
     height: 100%;
   }
   #work .container .splide-wrapper .splide {
